--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,25 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hono/node-server": "^1.19.9",
+    "@prisma/client": "^7.3.0",
+    "dotenv": "^17.2.3",
     "hono": "^4.11.7"
   },
   "devDependencies": {
     "@types/node": "^25.1.0",
+    "prisma": "^7.3.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
