--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,14 @@
   "dependencies": {
     "@hono/node-server": "^1.19.9",
     "@prisma/client": "^7.3.0",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
-    "hono": "^4.11.7"
+    "hono": "^4.11.7",
+    "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.1.0",
     "prisma": "^7.3.0",
     "tsx": "^4.21.0",
